# python-project-83

./: .coverage  .env  .gitignore  Makefile  README.md  coverage.xml  database.sql  pyproject.toml  urls
.github/workflows/: check_lint.yml
page_analyzer/: __Init__.py  app.py  db.py  url_handler.py  utils.py
page_analyzer/templates/: 404.html  500.html  base.html  flashmsg.html  index.html  page_url.html  urls.html
tests/: test_page.py
