[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.10"
flake8 = "^3.8.4"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"